Beyond-Degrees-main/server_debug_auth.log
file:///C:/Users/ibadu/Desktop/beyond/Beyond-Degrees/server/routes/authRoutes.js:2
import { login, verifyOTP } from '../controllers/authController.js';
                ^^^^^^^^^
SyntaxError: The requested module '../controllers/authController.js' does not provide an export named 'verifyOTP'
    at #asyncInstantiate (node:internal/modules/esm/module_job:302:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:405:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:660:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v24.13.0
